# gym-dapp-be

./: Anchor.toml  README.md
gym-dapp/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
gym-dapp/public/: index.html
gym-dapp/src/: App.tsx  constants.js  index.tsx  routes.tsx
gym-dapp/src/api/: gym-dapp_be.json  gym_dapp_be.ts
gym-dapp/src/assets/: NFTCollection.js  userExercises.js
gym-dapp/src/components/: NavBar.tsx
gym-dapp/src/components/ui/: 3d-card-efect.tsx  card-carousel.tsx  provider.tsx  sidebar.tsx
gym-dapp/src/context/: UserContext.tsx
gym-dapp/src/pages/: Exercises.tsx  Feed.tsx  Home.tsx  Notifications.tsx  Profile.tsx  Routines.tsx  Wallet.tsx  Workout.tsx
gym-dapp/src/pages/auth/: Authentication.tsx  LogIn.tsx  SignUp.tsx
gym-dapp/src/pages/exercises/: CardsCarousel.tsx  Exercise.tsx  ExerciseDescription.tsx
gym-dapp/src/pages/new-routine/: Exercise.tsx  ListOfExercises.tsx  NewRoutine.tsx  Routine.tsx  RoutineContainer.tsx  RoutinesElements.tsx
gym-dapp/src/pages/new-workout/: Exercise.tsx  ListOfExercises.tsx  NewWorkout.tsx  Reward.tsx  WorkoutExercises.tsx  WorkoutModals.tsx  hooks.ts  setsSlice.tsx  store.ts  volumeSlice.tsx  (+1 more)
programs/gym-dapp-be/: Cargo.toml
programs/gym-dapp-be/src/: constants.rs  error.rs  lib.rs
programs/gym-dapp-be/src/instructions/: create_user_account.rs  create_user_exercises.rs  create_user_routines.rs  create_user_workouts.rs  mod.rs
programs/gym-dapp-be/src/state/: mod.rs  user_account.rs  user_exercises.rs  user_routines.rs  user_workouts.rs
tests/: gym-dapp-be.ts
(+4 files in other folders)
